# omnifeed

./: .gitignore  DESIGN.md  README.md  pyproject.toml
integrations/openclaw/: README.md
scripts/: auto-refill.sh  bili-login.py  xhs-refresh-login.sh
src/omnifeed/: __init__.py  cli.py  cognitive_expand.py  config.py  engine.py  interaction_sync.py  llm.py  login.py  models.py  pool.py  processor.py  profile.py  query_builder.py  ranker.py  renderer.py
src/omnifeed/channels/: __init__.py  base.py  bilibili.py  github.py  reddit.py  rss.py  v2ex.py  weibo.py  xhs.py
